# dwemer_poolrooms

./: AGENTS.md  Cargo.toml  LICENSE  README.md  check.py
.cargo/: config.toml
examples/: date_spool_gallery.rs  login_surface.rs  slider_gallery.rs
examples/support/: mod.rs
scripts/: playtest
src/: chrome.rs  instrumentation.rs  lib.rs  tide.rs  water.rs
src/chrome/: date_spool.rs  foundry.rs  rail.rs
src/water/: engine.rs  gpu.rs  machines.rs  surface.rs  table.rs
src/water/engine/: audit.rs  composite.wgsl  dump.rs  forcing.wgsl  guard.rs  sim.wgsl
src/water/gpu/: audit.rs  composite.wgsl  dump.rs  guard.rs  sim.wgsl
