[package]
name = "dwemer_poolrooms"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dwemer Poolrooms: austere egui chrome over living GPU water surfaces"
documentation = "https://docs.rs/dwemer_poolrooms"
repository = "https://github.com/aoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoa/dwemer_poolrooms"
homepage = "https://github.com/aoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoaoa/dwemer_poolrooms"
keywords = ["egui", "wgpu", "gui", "shader"]
categories = ["gui", "graphics", "rendering"]
include = ["src/**", "examples/**", "assets/**", "LICENSE*", "README.md"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "login_surface"
required-features = ["water"]

[[example]]
name = "slider_gallery"
required-features = ["water"]

[[example]]
name = "date_spool_gallery"
required-features = ["water"]

[workspace]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.96"
version = "0.3.0"

[features]
default = ["water"]
instrumentation = []
water = ["dep:anyhow", "dep:bytemuck", "dep:egui-wgpu"]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
bytemuck = { version = "1.25.1", features = ["derive"], optional = true }
egui = "=0.34.3"
egui-wgpu = { version = "=0.34.3", optional = true }

[dev-dependencies]
egui-winit = "=0.34.3"
pollster = "0.4"

[lints]
workspace = true

[workspace.lints.rust]
warnings = "deny"
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = "deny"
unsafe_code = "deny"
unused_crate_dependencies = "warn"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
ambiguous_glob_imports = "allow"
ambiguous_glob_reexports = "allow"
hidden_glob_reexports = "allow"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -3 }

dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
allow_attributes_without_reason = "deny"

cargo_common_metadata = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"

enum_glob_use = "allow"
wildcard_imports = "allow"

items_after_statements = "allow"
many_single_char_names = "allow"
match_same_arms = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unnested_or_patterns = "allow"

cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
implicit_hasher = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
uninlined_format_args = "allow"

ignored_unit_patterns = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
unused_async = "allow"
used_underscore_binding = "allow"

[workspace.metadata.rust-starter]
format_command = ["cargo", "fmt", "--all", "--check"]
clippy_command = [
  "cargo",
  "clippy",
  "--workspace",
  "--all-targets",
  "--all-features",
]
test_command = ["cargo", "test", "--workspace", "--all-targets", "--all-features"]
doc_command = ["cargo", "doc", "--workspace", "--all-features", "--no-deps"]
canonicalize_commands = [
  [
    "cargo",
    "fix",
    "--workspace",
    "--all-targets",
    "--all-features",
    "--allow-dirty",
    "--allow-staged",
    "--allow-no-vcs",
  ],
  [
    "cargo",
    "clippy",
    "--fix",
    "--workspace",
    "--all-targets",
    "--all-features",
    "--allow-dirty",
    "--allow-staged",
    "--allow-no-vcs",
  ],
  ["cargo", "fmt", "--all"],
]

[workspace.metadata.rust-starter.source_files]
max_lines = 3000
include = ["*.rs", "**/*.rs"]
exclude = []
